# korkscript

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.markdown
.github/workflows/: run_tests.yml
engine/console/: CMDgram.y  CMDscan.cc  CMDscan.l  ast.h  astAlloc.cc  astNodes.cc  cmdgram.cc  cmdgram.h  codeBlock.cc  codeBlock.h  codeBlockWorld.cc  codeBlockWorld.h  compiledEval.cc  compiler.cc  compiler.h  console.cc  console.h  consoleDoc.cc  consoleFunctions.cc  consoleInternal.cc  consoleInternal.h  consoleLogger.cc  consoleLogger.h  consoleNamespace.cc  consoleNamespace.h  consoleObject.cc  consoleObject.h  consoleTypes.cc  consoleValue.h  dynamicTypes.cc  dynamicTypes.h  scriptObject.cc  simBase.cc  simBase.h  simManager.cc  simpleLexer.h  simpleParser.h  stlTypes.h  stringStack.cc  stringStack.h  (+6 more)
engine/core/: alignedBufferAllocator.h  dataChunker.cc  dataChunker.h  escape.cc  escape.h  fileStream.cc  findMatch.cc  findMatch.h  freeListHandleHelpers.h  hashFunction.cc  hashFunction.h  idGenerator.cc  idGenerator.h  memStream.cc  memStream.h  nStream.cc  safeDelete.h  simpleIntern.h  stream.h  stringTable.cc  stringTable.h  stringUnit.cc  tVector.cc  tVector.h  torqueConfig.h  unicode.cc
engine/embed/: api.cpp  api.h  compilerOpcodes.h  internalApi.h
engine/platform/: basicPlatform.cc  platform.cc  platform.h  platformAssert.cc  platformAssert.h  platformEndian.h  platformFileIO.cc  platformMemory.cc  platformMemory.h  platformNetAsync.cc  platformNetwork.cc  platformNetwork.h  platformString.h  platformStrings.cc  profiler.cc  profiler.h  types.gcc.h  types.h  types.posix.h  types.visualc.h  typesWin32.h
engine/platform/threads/: thread.h
test/: apiTest.cpp  apiTestScript.cs  astPrint.cpp  lexerCheck.cpp  main.cpp  parserCheck.cpp  testRunner.cpp  torqueTest.cpp
test/script_tests/: test_core.cs  test_exception.cs  test_fibers.cs  test_funcs.cs  test_interpolated_strings.cs  test_legacy_namespaces.cs  test_script_classes.cs  test_signals.cs  test_tuples.cs  test_typed_ops.cs
tools/: build_ast_print.sh  check_ast_regression.sh  run_ast_regression.sh  run_test_scripts.sh
torqueSim/bridges/: bridge_base.h
torqueSim/bridges/wasm/: test.wat  wasm3_embed.cpp  wasmtime_embed.cpp
torqueSim/console/: console.cc  console.h  consoleFunctions.cc  consoleLogger.cc  consoleLogger.h  consoleObject.cc  consoleObject.h  consoleTypes.cc  consoleTypes.h  typeValidators.cc  typeValidators.h
torqueSim/core/: fileStream.cc  fileStream.h  idGenerator.h  stringTable.cc  stringTable.h  stringUnit.cc  torqueConfig.h  unicode.cc  unicode.h
torqueSim/platform/: basicPlatformProcess.cc  platformFileIO.cc  platformFileIO.h  platformNetAsync.cc  platformNetAsync.h  platformNetwork.cc  platformNetwork.h  platformProcess.h  platformString.h  platformStrings.cc  platformTelnet.cc  platformTelnet.h
torqueSim/platform/threads/: mutex.h  thread.h
torqueSim/sim/: dynamicTypes.cc  dynamicTypes.h  scriptObject.cc  simBase.cc  simBase.h  simDictionary.cc  simDictionary.h  simFiberManager.cc  simFiberManager.h  simManager.cc
wasm/: wasmModule.cpp  wasmTest.js
